Funcionalidades de Exportar carnet peregrino y Editar peregrino (faltan validaciones y control de excepciones)